Changelog
=========

2.0.0 (unreleased)
------------------

- Remove ISubsiteLayer from subsite.logo viewlet. This allows us to register
  a more specific subsite.logo viewlet.
  [mathias.leimgruber]

- Add ftw.theming integration scss (Currently only a Icon).
  [mathias.leimgruber]

- Implement Dexterity based subsite content.
  [mathias.leimgruber]


1.4.2 (2015-02-27)
------------------

- Add ftw.publisher support for teaser portlet.
  [jone]


1.4.1 (2015-02-25)
------------------

- Fix teaserportlet migration 1001, which did not consistently migrate.
  [jone]


1.4.0 (2015-02-24)
------------------

- Fix UnicodeDecodeError while setting a title attr with umlauts.
  [mathias.leimgruber]

- Use getattr for getting the new alt text for teaser images to
  prevent us from writing a expensive upgrade step.
  [mathias.leimgruber]

- Implement alt (required for accessibility) text for teaser images.
  [kevin.bieri]


1.3.2 (2014-09-23)
------------------

- Add missing rolemap.xml (Add permission for Manager/Contributor).
  [mathias.leimgruber]

- Set a caching header for teaser portlet images.
  [deif]


1.3.1 (2014-02-10)
------------------

- Drop Plone.4.1 compatibility due to Plone-bugs  which interfere with our testsetup and were only fixed in 4.2
  (see: https://github.com/plone/Products.CMFPlone/pull/49)
  [tschanzt]

- Fix Subsitelogoviewlet when the context are portal tools.
  [tschanzt]

- Fix display issue with FileChunk instances after upgrading Plone from
  4.2.x to Plone 4.3.2.
  Reported in https://github.com/4teamwork/ftw.subsite/issues/39
  [mathias.leimgruber]


1.3.0 (2013-09-24)
------------------

- Added browserview returning available languages.
  [Julian Infanger]

- Refactor the language selector to be a "actionMenu" instead of a linklist
  and show the language selector on the site root too, when subsites are
  configured to show the site root as language.
  [jone]

- Fixed problem if the subsite logo is deleted.
  [Julian Infanger]
