@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_css" meta_type="Stylesheets Registry" autogroup="False">
+ <stylesheet
+    id="++resource++ftw.subsite-ressources/subsite.css"
+    expression="not:request/HTTP_X_FTW_THEMING|nothing"
+    rendering="link"/>
+</object>
