@@ -4,6 +4,9 @@ Changelog
 2.0.0 (unreleased)
 ------------------
 
+- Add ftw.theming expression to subsite.css.
+  [mathias.leimgruber]
+
 - Remove ISubsiteLayer from subsite.logo viewlet. This allows us to register
   a more specific subsite.logo viewlet.
   [mathias.leimgruber]
